# hunchlog

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
frontend/: app.js  index.html  styles.css
src/hunchlog/: __init__.py  main.py
src/hunchlog/api/: predictions.py  stats.py
src/hunchlog/core/: config.py  db.py
src/hunchlog/schemas/: prediction.py
src/hunchlog/services/: prediction_service.py  scoring.py
tests/: conftest.py  test_api.py  test_scoring.py
