[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hunchlog"
version = "0.1.0"
description = "Personal prediction calibration journal — Brier score + calibration curve."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "aiosqlite",
    "loguru",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hunchlog"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
